# worldmm-smvqa-gemma4-e2b

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  pyproject.toml
.omo/: boulder.json
.omo/drafts/: supermemory-vqa-gemma4-e2b.md  worldmm-smvqa-gemma4-e2b.md  worldmm-smvqa-phase2.md  worldmm-smvqa-spatial-memory.md
.omo/plans/: supermemory-vqa-gemma4-e2b.md  worldmm-smvqa-gemma4-e2b.md  worldmm-smvqa-phase2.md  worldmm-smvqa-spatial-memory.md
.omo/start-work/: ledger.jsonl
configs/: local.example.yaml  memory_alignment.example.yaml  remote.example.yaml  remote.student.example.yaml
configs/spatial/: exp_0005_teacher_oracle.example.json  model_boundary_contract_v1.json  model_boundary_contract_v2.json  model_load_provider_lock_v1.template.json  source_compact_v1.json  student_architecture_v1.json
docs/: README.md  implementation-review.md  spatial-token-compression.md  spatial-token-research-roadmap.md
docs/spatial-memory/: README.md  architecture.md  memory-runtime-architecture.md  on-device-memory-runtime-proposal.md  problem.md  roadmap.md  status.md  traceability.md
scripts/remote/: run_worldmm_smvqa.sh
src/worldmm_smvqa/: alignment_cli.py  attestation.py  chunking.py  cli.py  cli_args.py  cli_commands.py  config.py  fixture_cli.py  fixture_data.py  fixtures.py  memory_alignment.py  memory_alignment_config.py  memory_alignment_plan.py  memory_contract_v2.py  memory_sources.py  metrics.py  mock_dag.py  model_contract.py  model_load.py  openat2.py  preflight.py  (+21 more)
tests/: test_alignment_cli.py  test_chunking.py  test_chunking_source_end.py  test_cli_guardrails.py  test_fixture_generator.py  test_gcut3r_teacher.py  test_geometry_binding.py  test_geometry_executor.py  test_geometry_executor_safety.py  test_llm_memory.py  test_memory_alignment.py  test_memory_alignment_backend.py  test_memory_alignment_plan.py  test_memory_contract_v2.py  test_memory_sources.py  test_metrics.py  test_mock_dag.py  test_model_contract.py  test_model_load.py  test_preflight.py  test_qa_distributed_validation.py  test_qa_geometry_choice_units.py  test_qa_prompt.py  test_qa_resume.py  test_qa_resume_manifest.py  test_qa_shards.py  test_qa_trust_boundaries.py  test_remote_contract.py  test_remote_finalizer_contract.py  test_remote_launch.py  test_remote_launch_dag.py  test_remote_launch_plan.py  test_report.py  test_retrieval_causal.py  test_retrieval_egobutler_protocol.py  test_retrieval_freshness.py  test_retrieval_protocol_trace.py  test_retrieval_video_rag_protocol.py  test_schema_anti_leakage.py  test_sensor_audit.py  (+25 more)
(+92 files in other folders)
