[project]
name = "worldmm-smvqa"
version = "0.1.0"
description = "WorldMM-style SuperMemory-VQA scaffold with local guardrails."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
worldmm-smvqa = "worldmm_smvqa.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = ["error"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "C901",
    "ISC001",
    "CPY001",
    "D100",
    "D101",
    "D103",
    "D104",
    "D105",
    "D203",
    "D213",
    "TC003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",
    "S101",
    "S603",
    "S607",
    "PLR2004",
]
